--- a/Login/login.css
+++ b/Login/login.css
@@ -31,6 +31,7 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    font-family: 'Outfit'; 
 }
 
 
@@ -54,7 +55,7 @@ body{
 
 #formulario{
     display: block;
-    width: 280px;
+    width: 300px;
     justify-content: center;
     font-family: 'Outfit';
     padding-left: 3%;
