--- a/Cadastro/Empresa/mainCad.css
+++ b/Cadastro/Empresa/mainCad.css
@@ -27,9 +27,8 @@
 
 html,
 body {
-    margin: 0;
     height: 100%; /* Garante que o body e o html ocupem toda a tela */
-    background-color: var(--color-cinzafundo);
+    
     color: var(--color-fontecinza);
 }
 
@@ -72,18 +71,17 @@ main {
     font-weight: 400;
 }
 
-#formulario {
+.formulario {
     width: clamp(200px, 350px, 350px); /* clamp(tamanhos Mínimo, Preferível(médio) , Máximo) */
     border-radius: 15px;
-    justify-content: center;
-    font-family: 'Outfit';
+    
     padding: 50px 30px;
     background-color: var(--color-cinzaclaro);
     box-shadow: var(--shadow-caixagrande);
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
 }
 
@@ -119,19 +117,31 @@ main {
     transition: 0.4s;
 }
 
-#return_button {
+.return_button {
     align-items: center;
     padding: 5% 0% 0 0;
-}
-
-#return_button a {
     color: var(--color-fontecinza);
-    text-decoration: none;
     font-weight: 500;
     font-size: 14px;
+    border: none;
 }
 
-#return_button a:hover {
+
+.return_button:hover {
     color: var(--color-hover-fontecinza);
     transition: 0.4s;
+}
+
+.return_button a{
+    font-weight: 500;
+    font-size: 14px;
+    border: none;
+    color: var(--color-fontecinza);
+ }
+
+.return_button button {
+    font-weight: 500;
+    font-size: 14px;
+    border: none;
+    color: var(--color-fontecinza);
 }
