--- a/Decisao/decisao.css
+++ b/Decisao/decisao.css
@@ -1,117 +1,145 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
     --color-vermelho: #BD2323;
     --color-hover-vermelho: #be4d4d;
     --color-branco: #ffffff;
     --color-fontecinza: #463B3B;
     --color-cinzaclaro: #F8F8F8;
-    --color-cinzafundo:#EEEEEE;
+    --color-cinzafundo: #EEEEEE;
     --shadow-caixagrande: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
     --shadow-caixainput: 0px 4px 10px rgba(0, 0, 0, 0.15);
 }
 
 
-*{
+* {
     margin: 0;
     padding: 0;
-    scroll-behavior: smooth; /* Scrool suave */
+    scroll-behavior: smooth;
+    /* Scrool suave */
     font-family: 'Outfit';
     text-decoration: none;
-    box-sizing: border-box; /* Previne que elementos vazem de dentro das divs */
+    box-sizing: border-box;
+    /* Previne que elementos vazem de dentro das divs */
+    text-decoration: none;
 }
 
 html,
-body{
+body {
     height: 100%;
     background-color: var(--color-cinzafundo);
 }
 
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.container_cadastro {
+    width: 60%;
+    /* clamp(tamanhos Mínimo, Preferível(médio) , Máximo) */
+    background-color: var(--color-cinzaclaro);
+    border-radius: 15px;
+    box-shadow: var(--shadow-caixagrande);
+    padding: 30px 30px;
+}
+
+
 .cadastro_title {
     text-align: center;
-    font-style: normal;
     font-weight: 500;
     font-size: 40px;
     color: var(--color-fontecinza);
 }
 
 .cadastro_subtitle {
-    font-style: normal;
-    text-align: center;
     font-weight: 400;
     font-size: 18px;
+    text-align: center;
     color: var(--color-fontecinza);
 }
 
-.container_cadastro{
-    width: 70%;
-    height: 90%;
-    background-color: var(--color-cinzaclaro);
-    border-radius: 15px;
-    box-shadow: var(--shadow-caixagrande);
-    margin:5%;
-    margin-left: 16%;
-}
 
-.container_icon{
+.container_icon {
     display: flex;
     justify-content: center;
-    padding: 5%;
-    margin: 5% 5%;
+    margin: 5% 0;
+    flex-wrap: wrap;
+    gap: 20%;
 }
 
-.img_cliente{
-    margin-right: 200px;
-}
-
-.img_cliente:hover{
-    transform: translateY(-5%);
-    transition: 0.5s;
-    cursor:pointer;
-}
-
-.img_empresa:hover{
-    transform: translateY(-5%);
-    transition: 0.5s;
-    cursor:pointer;
-}
-
-.container_nomes{
+.container_image {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 1%;
 }
 
-#lbl_clientes{
-    margin-right: 370px;
-    margin-bottom: 6%;
+.img_icon {
+    width: 250px;
 }
 
-.cadastro_id{
+.img_icon:hover {
+    transform: translateY(-5%);
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+
+.cadastro_id {
     font-style: normal;
     text-align: center;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 22px;
     color: var(--color-fontecinza);
-    cursor:pointer;
-    text-decoration: none;
+    cursor: pointer;
+
 }
 
-.button_submit{
-    font-family: 'Outfit';
+.button_submit {
     color: var(--color-branco);
     background-color: var(--color-vermelho);
-    border:none;
+    border: none;
     border-radius: 7px;
-    width: 120px;
-    height: 35px;
     font-size: 15px;
     font-weight: 400;
     cursor: pointer;
     box-shadow: var(--shadow-caixagrande);
-    margin-bottom: 3%;
-    margin-left: 3%;
+    padding: 8px 18px;
 }
 
-.button_submit:hover{
+.button_submit:hover {
     background-color: var(--color-hover-vermelho);
     transition: 0.4s;
+}
+
+
+
+
+@media screen and (max-width: 800px) {
+    .container_cadastro {
+        width: 80%;
+    }
+
+    .img_icon {
+        width: 200px;
+    }
+
+    .container_image {
+        margin: 5%;
+    }
+
+    .container_icon {
+        margin: 5% 0;
+    }
+
+    html,
+    body {
+        height: 100%;
+        background-color: var(--color-vermelho);
+    }
 }
