--- a/RecSenha/recsenha.css
+++ b/RecSenha/recsenha.css
@@ -1,74 +1,91 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
-  --color-vermelho: #bd2323;
+  --color-vermelho: #BD2323;
   --color-hover-vermelho: #be4d4d;
   --color-branco: #ffffff;
-  --color-fontecinza: #463b3b;
-  --color-cinzaclaro: #f8f8f8;
-  --color-cinzafundo: #eeeeee;
+  --color-fontecinza: #463B3B;
+  --color-cinzaclaro: #F8F8F8;
+  --color-cinzafundo: #EEEEEE;
   --shadow-caixagrande: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
   --shadow-caixainput: 0px 4px 10px rgba(0, 0, 0, 0.15);
 }
 
-.recsenha_title {
-  padding-top: 1%;
-  padding-bottom: 1%;
+
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  /* Scrool suave */
+  font-family: 'Outfit';
+  text-decoration: none;
+  box-sizing: border-box;
+  /* Previne que elementos vazem de dentro das divs */
+  text-decoration: none;
+}
+
+html,
+body {
+  height: 100%;
+  background-color: var(--color-cinzafundo);
+}
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+#container_rec {
+  width: 60%;
+  background-color: var(--color-cinzaclaro);
+  border-radius: 15px;
+  box-shadow: var(--shadow-caixagrande);
+  padding: 30px 30px;
+}
+
+#return {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  position: absolute;
+}
+
+.material-symbols-outlined {
+  color: var(--color-vermelho);
+  font-size: 35px !important;
+
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 800,
+  'GRAD' 200,
+  'opsz' 48
+  
+}
+
+
+.title {
   text-align: center;
-  font-style: normal;
   font-weight: 500;
   font-size: 40px;
   color: var(--color-fontecinza);
 }
 
-.recsenha_subtitle {
-  font-style: normal;
-  text-align: center;
+.subtitle {
   font-weight: 400;
   font-size: 18px;
+  text-align: center;
   color: var(--color-fontecinza);
 }
 
-* {
-  text-decoration: none;
-  margin: 0;
-  padding: 0;
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: "Outfit";
-  background-color: var(--color-cinzafundo);
-}
-
-.container_recsenha {
-  width: 70%;
-  height: 90%;
-  background-color: var(--color-cinzaclaro);
-  border-radius: 15px;
-  box-shadow: var(--shadow-caixagrande);
-  margin: 5%;
-  margin-left: 16%;
-}
-
-.button_submit {
-  color: var(--color-branco);
-  background-color: var(--color-vermelho);
-  border: none;
-  border-radius: 7px;
-  width: 120px;
-  height: 35px;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
-  cursor: pointer;
-  box-shadow: var(--shadow-caixagrande);
-  margin-bottom: 3%;
-  margin-left: 3%;
-}
-
-.button_submit:hover {
-  background-color: var(--color-hover-vermelho);
-  transition: 0.4s;
+.row {
+  margin: 2.5% 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .input_box {
@@ -76,55 +93,59 @@ body {
   border: none;
   border-radius: 5px;
   font-size: 17px;
-  font-style: normal;
   font-weight: 300;
   height: 30px;
-  width: 500px;
-  margin-top: 2.5%;
-  margin-bottom: 2.5%;
+  width: 55%;
   padding-left: 15px;
 }
 
-.container_icon {
-  padding-top: 10%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-.container_input {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-.container_input input {
-  text-align: center;
-}
 
-.button_enviar {
+
+
+
+
+
+
+
+.small_button {
   color: var(--color-branco);
   background-color: var(--color-vermelho);
   border: none;
   border-radius: 7px;
-  width: 120px;
-  height: 35px;
   font-size: 15px;
-  font-style: normal;
   font-weight: 400;
   cursor: pointer;
   box-shadow: var(--shadow-caixagrande);
-  margin-bottom: 5%;
-  margin-top: 2%;
+  padding: 8px 30px;
 }
 
-.button_enviar:hover {
+.small_button:hover {
   background-color: var(--color-hover-vermelho);
   transition: 0.4s;
 }
 
-.container_button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+
+
+@media screen and (max-width: 800px) {
+
+  .row {
+    margin: 10% 0;
+  }
+
+  .input_box {
+    width: 100%;
+  }
+
+  #container_rec {
+    width: 80%;
+  }
+
+  html,
+  body {
+    height: 100%;
+    background-color: var(--color-vermelho);
+  }
 }
