--- a/Cadastro/Empresa/etapas/pagamento.css
+++ b/Cadastro/Empresa/etapas/pagamento.css
@@ -1,47 +1,45 @@
-.subtitle_div {
-    margin: 2%;
+/* Variáveis */
+:root {
+    --color-vermelho: #BD2323;
+    --color-hover-vermelho: #be4d4d;
+    --color-branco: #ffffff;
+    --color-fontecinza: #463B3B;
+    --color-hover-fontecinza: #000000;
+    --color-cinzaclaro: #F8F8F8;
+    --color-cinzafundo: #EEEEEE;
+    --shadow-caixagrande: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
+    --shadow-caixainput: 0px 4px 10px rgba(0, 0, 0, 0.15);
+}
+
+#container_summary {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin: 10px 0;
+    border: 1px solid var(--color-cinzafundo);
+    border-radius: 5px;
+
 }
 
-.subtitle_div span {
-    font-weight: 500;
-    font-size: 16px;
+#container_summary .row {
+    justify-content: center;
+    padding: 15px;
+    border-bottom: 1px solid var(--color-cinzafundo);
 }
 
-.subtitle_div {
+#container_summary .row:last-child {
+    border-bottom: 0px solid var(--color-cinzafundo);
+}
+
+#container_summary h5 {
+    font-style: normal;
     font-weight: 300;
-    font-size: 14px;
-}
-
-.row_pagamento {
-    margin-bottom: 2%;
-    border-radius: 8px;
-}
-
-.data_cvv {
-    flex-direction: row;
-    gap: 10px;
-}
-
-.opcao {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-
-
-    width: 100%;
-    box-shadow: var(--shadow-caixainput);
-    border: none;
-    border-radius: 10px;
-    margin-bottom: 10%;
-    padding: 12px;
-}
-
-.opcao span {
+    font-size: 16px;
     color: var(--color-fontecinza);
-    padding-left: 8px;
-    justify-self: center;
+}
+
+#container_summary h6 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    color: var(--color-fontecinza);
 }
