--- a/Privacidade/termos.css
+++ b/Privacidade/termos.css
@@ -32,7 +32,8 @@ html,
 body {
     height: 100%;
     /* Garante que o body e o html ocupem toda a tela */
-    background-color: var(--color-cinzafundo);
+    background-color: var(--color-vermelho);
+    /* background-color: var(--color-cinzafundo); */
     color: var(--color-fontecinza);
 }
 
@@ -41,14 +42,12 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
 
-    background-color: var(--color-cinzafundo);
+    /* background-color: var(--color-cinzafundo);
     background: url(img/onda_fundo.svg);
     background-repeat: no-repeat;
     background-position: bottom;
-    background-size: contain;
+    background-size: contain; */
 }
 
 /* Formata as "linhas" da caixa do forms */
@@ -58,52 +57,75 @@ main {
     flex-direction: column;
 }
 
+ul {
+    list-style-type: none;
+}
+
+li {
+    padding-left: 10px;
+    margin: 5px 0;
+}
+
 /* --- */
 
 .main_title {
     text-align: center;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 40px;
-    margin-bottom: 9.5%;
     color: var(--color-fontecinza);
 }
 
 .smaller_text {
-    text-align: center;
+    text-align: start;
     font-style: normal;
-    font-weight: 500;
-    font-size: 22px;
-    margin-bottom: 9.5%;
+    font-weight: 600;
+    font-size: 25px;
+    margin: 10px 0;
     color: var(--color-fontecinza);
+    padding: 0 0 5px 0;
+    border-bottom: 1px solid var(--color-fontecinza);
 }
 
-.label {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 18px;
-    color: var(--color-fontecinza);
+#return {
+    display: flex;
+    justify-content: start;
+    align-items: center;
 }
 
-.pagamento_subtitle {
-    font-size: 20px;
-    font-style: normal;
+#return a {
+    display: flex;
+    color: var(--color-vermelho);
+    justify-content: center;
+    align-items: center;
+}
+
+.material-symbols-outlined {
+    color: var(--color-vermelho);
+    font-size: 35px !important;
+
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 800,
+        'GRAD' 200,
+        'opsz' 48
+}
+
+.paragrafo {
+    font-size: 16px;
     font-weight: 400;
+    margin: 15px 0;
 }
 
-.formulario {
-    width: clamp(200px, 350px, 350px);
-    /* clamp(tamanhos Mínimo, Preferível(médio) , Máximo) */
-    border-radius: 15px;
-
+.conteudo {
+    width: 1000px;
     padding: 50px 30px;
-    background-color: var(--color-cinzaclaro);
+    background-color: var(--color-cinzafundo);
     box-shadow: var(--shadow-caixagrande);
 
     display: flex;
+    text-align: justify;
     flex-direction: column;
-    /* align-items: center; */
-    justify-content: center;
 }
 
 .input_box {
@@ -168,6 +190,7 @@ main {
 }
 
 @media screen and (max-width: 800px) {
+
     html,
     body {
 
