--- a/RecSenha/recsenha.css
+++ b/RecSenha/recsenha.css
@@ -1,130 +1,151 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
-    --color-vermelho: #BD2323;
-    --color-hover-vermelho: #be4d4d;
-    --color-branco: #ffffff;
-    --color-fontecinza: #463B3B;
-    --color-cinzaclaro: #F8F8F8;
-    --color-cinzafundo:#EEEEEE;
-    --shadow-caixagrande: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
-    --shadow-caixainput: 0px 4px 10px rgba(0, 0, 0, 0.15);
+  --color-vermelho: #BD2323;
+  --color-hover-vermelho: #be4d4d;
+  --color-branco: #ffffff;
+  --color-fontecinza: #463B3B;
+  --color-cinzaclaro: #F8F8F8;
+  --color-cinzafundo: #EEEEEE;
+  --shadow-caixagrande: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
+  --shadow-caixainput: 0px 4px 10px rgba(0, 0, 0, 0.15);
 }
 
-.recsenha_title {
-    padding-top: 1%;
-    padding-bottom: 1%;
-    text-align: center;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 40px;
-    color: var(--color-fontecinza);
+
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  /* Scrool suave */
+  font-family: 'Outfit';
+  text-decoration: none;
+  box-sizing: border-box;
+  /* Previne que elementos vazem de dentro das divs */
+  text-decoration: none;
 }
 
-.recsenha_subtitle {
-    font-style: normal;
-    text-align: center;
-    font-weight: 400;
-    font-size: 18px;
-    color: var(--color-fontecinza);
+html,
+body {
+  height: 100%;
+  background-color: var(--color-cinzafundo);
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-body{
-    font-family: 'Outfit'; 
-    background-color: var(--color-cinzafundo);
+#container_rec {
+  width: 60%;
+  background-color: var(--color-cinzaclaro);
+  border-radius: 15px;
+  box-shadow: var(--shadow-caixagrande);
+  padding: 30px 30px;
 }
 
-.container_recsenha{
-    width: 70%;
-    height: 90%;
-    background-color: var(--color-cinzaclaro);
-    border-radius: 15px;
-    box-shadow: var(--shadow-caixagrande);
-    margin:5%;
-    margin-left: 16%;
+#return {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  position: absolute;
 }
 
-.button_submit{
-    color: var(--color-branco);
-    background-color: var(--color-vermelho);
-    border:none;
-    border-radius: 7px;
-    width: 120px;
-    height: 35px;
-    font-size: 15px; 
-    font-style: normal;
-    font-weight: 400;
-    cursor: pointer;
-    box-shadow: var(--shadow-caixagrande);
-    margin-bottom: 3%;
-    margin-left: 3%;
+.material-symbols-outlined {
+  color: var(--color-vermelho);
+  font-size: 35px !important;
+
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 800,
+  'GRAD' 200,
+  'opsz' 48
+  
 }
 
-.button_submit:hover{
-    background-color: var(--color-hover-vermelho);
-    transition: 0.4s;
+
+.title {
+  text-align: center;
+  font-weight: 500;
+  font-size: 40px;
+  color: var(--color-fontecinza);
+}
+
+.subtitle {
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
+  color: var(--color-fontecinza);
+}
+
+.row {
+  margin: 2.5% 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .input_box {
-    box-shadow: var(--shadow-caixainput);
-    border: none;
-    border-radius: 5px;
-    font-size: 17px;
-    font-style: normal;
-    font-weight: 300;
-    height: 30px;
-    width: 500px;
-    margin-top: 2.5%;
-    margin-bottom: 2.5%;
-    padding-left: 15px;
+  box-shadow: var(--shadow-caixainput);
+  border: none;
+  border-radius: 5px;
+  font-size: 17px;
+  font-weight: 300;
+  height: 30px;
+  width: 55%;
+  padding-left: 15px;
 }
 
-.container_icon{
-    padding-top: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+
+
+
+
+
+
+
+
+
+.small_button {
+  color: var(--color-branco);
+  background-color: var(--color-vermelho);
+  border: none;
+  border-radius: 7px;
+  font-size: 15px;
+  font-weight: 400;
+  cursor: pointer;
+  box-shadow: var(--shadow-caixagrande);
+  padding: 8px 30px;
 }
 
-.container_input{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.small_button:hover {
+  background-color: var(--color-hover-vermelho);
+  transition: 0.4s;
 }
 
-.container_input input{
-    text-align: center;
-}
 
-.button_enviar{
-    color: var(--color-branco);
+
+
+@media screen and (max-width: 800px) {
+
+  .row {
+    margin: 10% 0;
+  }
+
+  .input_box {
+    width: 100%;
+  }
+
+  #container_rec {
+    width: 80%;
+  }
+
+  html,
+  body {
+    height: 100%;
     background-color: var(--color-vermelho);
-    border:none;
-    border-radius: 7px;
-    width: 120px;
-    height: 35px;
-    font-size: 15px; 
-    font-style: normal;
-    font-weight: 400;
-    cursor: pointer;
-    box-shadow: var(--shadow-caixagrande);
-    margin-bottom: 5%;
-    margin-top: 2%;
+  }
 }
-
-.button_enviar:hover{
-    background-color: var(--color-hover-vermelho);
-    transition: 0.4s;
-}
-
-.container_button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
