--- a/src/globalAssets/scss/_global.scss
+++ b/src/globalAssets/scss/_global.scss
@@ -74,7 +74,9 @@ body {
 }
 
 @mixin hamburgerBtn {
-
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
     display: none;
     background-color: transparent;
     border: none;
