--- a/src/globalAssets/globaltail.css
+++ b/src/globalAssets/globaltail.css
@@ -13,6 +13,7 @@
     border: none;
     border-radius: .4375rem;
     font-size: .9375rem;
+    font-weight: 600;
     cursor: pointer;
     box-shadow: 0rem .25rem .625rem rgba(0, 0, 0, 0.15);
     padding: 10px 25px;
