--- a/src/home/Deslogado/css/style.css
+++ b/src/home/Deslogado/css/style.css
@@ -675,11 +675,6 @@ video {
   color: rgb(70 59 59 / var(--tw-text-opacity));
 }
 
-.text-vermelho {
-  --tw-text-opacity: 1;
-  color: rgb(189 35 35 / var(--tw-text-opacity));
-}
-
 .drop-shadow-xl {
   --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -729,6 +724,10 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: flex;
   }
