--- a/src/globalAssets/globaltail.css
+++ b/src/globalAssets/globaltail.css
@@ -1,11 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /* Fontes */
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+/* Variáveis CSS (presentes no arquivo 'tailwind.config.js') */
+:root {
+    --color-vermelho: #BD2323;
+    --color-hover-vermelho: #be4d4d;
+    --color-branco: #ffffff;
+    --color-fontecinza: #463B3B;
+    --color-cinzaclaro: #F8F8F8;
+    --color-cinzafundo: #EEEEEE;
+    --shadow-caixagrande: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
+    --shadow-caixainput: 0px 4px 10px rgba(0, 0, 0, 0.15);
+}
 
 /* Classes Personalizadas */
+
+font-custom {
+    font-family: 'Outfit';
+}
 
 .redBtn {
     color: #ffffff;
@@ -35,3 +50,21 @@
     opacity: 70%;
     transition: 0.4s;
 }
+
+.backgroundContainer {
+  width: 80%;
+  margin: 0 auto; 
+  background-color: #F8F8F8;
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
+  padding: 30px;
+}
+
+/* 
+.backgroundContainer {
+    width: 60%;
+    background-color: #F8F8F8;
+    border-radius: 15px;
+    box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
+    padding: 30px 30px;
+} */
