--- a/src/Login/login.css
+++ b/src/Login/login.css
@@ -32,8 +32,26 @@
     padding: 0;
     scroll-behavior: smooth;
     font-family: 'Outfit'; 
+    text-decoration: none;
 }
 
+#return {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.material-symbols-outlined {
+    color: var(--color-vermelho);
+    font-size: 35px !important;
+  
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 800,
+    'GRAD' 200,
+    'opsz' 48
+    
+  }
 
 body{
     background: url(img/onda_fundo.svg);
