Tela de Login, Rotas, Inicio Login

--- a/src/Views/index/index.phtml
+++ b/src/Views/index/index.phtml
@@ -5,9 +5,7 @@
         preços
         justos.</span>
 
-        <button class="btn btn-accent btn-outline w-1/1 md:w-1/2 justify-self-center">Button</button>
-
-    <a href="#" class="btn-red text-center w-1/1 md:w-1/2 justify-self-center">
+    <a href="/login" class="btn btn-primary text-branco w-1/1 md:w-1/2 justify-self-center">
         Tenho interesse!
     </a>
 </main>
