--- a/src/input.css
+++ b/src/input.css
@@ -35,23 +35,11 @@
     {
         @apply text-branco text-base font-normal cursor-pointer shadow-caixainput bg-vermelho border-0 rounded-lg px-6 py-2.5 antialiased
     }
-}
 
-.redBtn {
-    color: #ffffff;
-    background-color: #BD2323;
-    border: none;
-    border-radius: .4375rem;
-    font-size: .9375rem;
-    font-weight: 400;
-    cursor: pointer;
-    box-shadow: 0rem .25rem .625rem rgba(0, 0, 0, 0.15);
-    padding: 10px 25px;
-}
-
-.redBtn:hover {
-    background-color: #be4d4d;
-    transition: 0.4s;
+    .cardContainer
+    {
+        @apply w-4/5 my-8 mx-auto bg-cinzaclaro rounded-2xl shadow-xl p-8
+    }
 }
 
 .signIn {
@@ -66,14 +54,7 @@
     transition: 0.4s;
 }
 
-.backgroundContainer {
-  width: 80%;
-  margin: 30px auto; 
-  background-color: #F8F8F8;
-  border-radius: 15px;
-  box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
-  padding: 30px;
-}
+
 
 
 /* Títulos */
